<resources>
    <string name="app_name">VacancyViewerApp</string>

    <string name="keywords_for_search">Введите ключевые слова для поиска:</string>
    <string name="search_description">Искать в подробном описании</string>
    <string name="period">Выберите период</string>
    <string name="min_salary">Введите ожидаемый уровень зарплаты:</string>
    <string name="city">Введите город:</string>
    <string name="save_search_results">Сохранить результаты поиска в телефоне</string>
    <string name="fragment_search_show_results">Показать вакансии</string>
    <string name="fragment_search_short_result_template">По вашему запросу найдено %d вакансий</string>
    <string name="chk_favorite">Добавить в избранное</string>

    <string name="menu_save_search_result">Сохранить результат поиска</string>

    <string-array name="period_array">
        <item>today</item>
        <item>three</item>
        <item>week</item>
        <item>month</item>
    </string-array>

    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="menu_favorite">Избранное</string>
    <string name="menu_saved_searches">Сохраненные поиски</string>

</resources>
