<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_keywords_for_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keywords_for_search" />

        <EditText
            android:id="@+id/et_keywords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

        <RadioButton
            android:id="@+id/rb_search_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_description" />

        <TextView
            android:id="@+id/tv_period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/period" />

        <Spinner
            android:id="@+id/spn_period"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city" />

        <EditText
            android:id="@+id/et_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/tv_min_salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/min_salary" />

        <EditText
            android:id="@+id/et_min_salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/tv_short_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_fragment_search_show_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_search_show_results" />
    </LinearLayout>
</ScrollView>
